# avginch

./: BASE_SEPOLIA_DEPLOYMENT.md  CLEAN_ADDRESS_MAPPING.md  DEPLOYMENT.md  README.md  test-order-submission.js  test-specific-identity.js
evm/: .env.example  README.md  deploy-base-sepolia.bat  deploy-base-sepolia.sh  deploy.bat  deploy.sh  hardhat.config.ts  package-lock.json  package.json  post-deploy-config.js
evm/contracts/: BaseEscrow.sol  ICPEscrowDst.sol  ICPEscrowFactory.sol  ICPEscrowSrc.sol  MockAccessToken.sol
evm/contracts/interfaces/: IBaseEscrow.sol  IEscrow.sol  IEscrowDst.sol  IEscrowFactory.sol  IICPEscrowFactory.sol
evm/contracts/libraries/: ImmutablesLib.sol  ProxyHashLib.sol  TimelocksLib.sol
evm/ignition/modules/: ICPEscrow.ts
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  constants.ts  index.css  main.tsx  types.ts
frontend/src/components/: ChainSelector.tsx  Connect Wallet.tsx  Header.tsx  Providers.tsx  SwapInterface.tsx  TokenSelector.tsx
frontend/src/context/: authclient.ts
frontend/src/hooks/: useAuthClient.ts
frontend/src/web3/: evm.ts  icp.ts
icp/: README.md  canister_deploy.sh  commands.txt  dfx.json  leo-dev.pem
icp/src/icp_backend/: Cargo.toml  icp_backend.did
icp/src/icp_backend/src/: ledger.rs  lib.rs  storage.rs  types.rs  utils.rs
resolver/: .env.example  README.md  contracts.js  main.js  package-lock.json  package.json  start.sh  test-order.json  test.js
scripts/: crypto.js  example.js  icpagent.js  package-lock.json  package.json
(+6 files in other folders)
