[package]
name = "icp_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18.5"
ic-cdk-timers = "0.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10"
hex = "0.4"
ic-ledger-types = "0.15.0"
icrc-ledger-types = "0.1.10"
ic-cdk-macros = "0.18.5"
num-traits = "0.2"
